@@ -410,6 +410,7 @@ int    ENDFReadMF15       (ifstream *, ENDF *, const int);
 int    ENDFReadMF31       (ifstream *, ENDF *, const int);
 int    ENDFReadMF32       (ifstream *, ENDF *);
 int    ENDFReadMF33       (ifstream *, ENDF *, const int);
+int    ENDFReadMF34       (ifstream *, ENDF *, const int);
 
 void   ENDFWriteMF1       (ENDF *);
 void   ENDFWriteMF2       (ENDF *);
@@ -428,6 +429,7 @@ void   ENDFWriteMF15      (ENDF *);
 void   ENDFWriteMF31      (ENDF *);
 void   ENDFWriteMF32      (ENDF *);
 void   ENDFWriteMF33      (ENDF *);
+void   ENDFWriteMF34      (ENDF *);
 
 void   ENDFPrintLIST      (ENDF *, const int);
 void   ENDFPrint1Dim      (ENDF *, const int);
