@@ -1,3 +1,9 @@
+2017-12-19  Toshihiko Kawano  <kawano@lanl.gov>
+
+	* source/endfio.cpp (ENDFReadMF8): bug fixed
+	* source/decetable8.cpp (DeceTableMF8MT457): bug fixed
+	MF8 read/write bug for some cases fixed
+
 2017-09-14  Toshihiko Kawano  <kawano@lanl.gov>
 
 	* source/endfio.cpp (ENDFReadMF2): updated
